--- a/index.html
+++ b/index.html
@@ -1,55 +1,12 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
   <head>
-	<title>Mission Control</title>
-	<meta name="viewport" content="width=400px" />
-	
-	<script src="socket.io/socket.io.js"></script>
-	<link rel="stylesheet" href="style.css">
+	<title>Shib Score</title>
 
-	<style>
-	table, th, td {
-    		border: 1px solid black;
-}
-</style>
-
-var xVal = 0;
-var yVal = 1;
-var updateInterval = 100;
-var dataLength = 200; // number of dataPoints visible at any point
-
-	<span style="position: absolute; left:55px; top: 530px; font-size:200%;width:25%;">Distance to Ground (ft): <span id="gndDist"> </span></span>
-	<span style="position: absolute; right:100px; top: 200px; font-size:400%;width:25%;">Distance to Target (ft): <span id="lidarDist"> </span></span>
-
-	<script type="text/javascript">
-		document.onkeydown = function(evt) {
-			evt = evt || window.event;
-			var x = document.getElementById("armed");
-			if (x.checked == true){
-				if (evt.ctrlKey && evt.keyCode == 90) {
-					socket.emit('sig', { value: 1 })
-				}
-	
-				else if (evt.ctrlKey && evt.keyCode == 88) {
-					socket.emit('sig', { value: 2 })
-				}
-				else if (evt.ctrlKey && evt.keyCode == 67) {
-					socket.emit('sig', { value: 4})
-				}
-			}
-			if (evt.keyCode == 32){
-				if (x.checked == false){
-					document.getElementById("armed").checked = true;
-				}
-				else{
-					document.getElementById("armed").checked = false;
-				}
-			}
-			if (evt.keyCode == 83) {
-					socket.emit('sig', { value: 3})
-				}
-		};
+	<span style="position: absolute; left:55px; top: 30px; font-size:100%;width:25%;">We<span id="gndDist"><input type="text" name="firstname"> </span></span>
+	<span style="position: absolute; right:55px; top: 30px; font-size:100%;width:25%;">They<span id="lidarDist"><input type="text" name="firstname"> </span></span>
 
 	</script>	
   </body>
 </html>
+
+<input type="text" name="firstname">
